<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/container">

    <androidx.cardview.widget.CardView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/header_blue"
        app:cardElevation="50dp"
        app:cardCornerRadius="0dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/header_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:layout_margin="20dp"
                android:textStyle="bold"
                android:textSize="28sp"
                android:textColor="@color/white"
                android:layout_centerVertical="true"/>

            <ImageView
                android:id="@+id/icon_filtered_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_filtered_list"
                android:contentDescription="@string/icon_filtered_list"
                android:clickable="true"
                android:focusable="true"
                android:layout_alignParentEnd="true"
                android:layout_margin="8dp"
                android:layout_centerVertical="true"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_meeting_btn"
        android:src="@drawable/ic_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="20dp"
        android:contentDescription="@string/add_réu_btn"
        android:backgroundTint="@color/red"
        android:focusable="true"
        android:clickable="true"
        app:tint="@color/white"
        app:fabSize="auto"
        app:elevation="6dp"/>

</RelativeLayout>