<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <ImageView
                android:id="@+id/meeting_color"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/meeting_image"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"/>

            <RelativeLayout
                android:id="@+id/relativeLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@+id/meeting_color">

                <HorizontalScrollView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scrollbars="none"
                    android:layout_marginEnd="35dp">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/meeting_infos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/meeting_info"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:maxLines="1"
                    android:ellipsize="marquee"/>

                <TextView
                    android:id="@+id/meeting_participants"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/meeting_info"
                    android:textSize="18sp"
                    android:layout_below="@+id/meeting_infos"
                    android:maxLines="1"
                    android:ellipsize="marquee"/>

                    </RelativeLayout>

                </HorizontalScrollView>

                <ImageView
                    android:id="@+id/delete_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_delete_meeting"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@string/delete_meeting_btn"
                    android:layout_centerVertical="true"/>

            </RelativeLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>